pod.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: nginx-service
  name: todopod
  labels:
    app: todopod

spec:
 containers:
   - name: todo-container
     image: dhirendradockerrg.azurecr.io/newimagefortodo:V1
     ports:
      - containerPort: 80
